Changes to the code

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="bottom-part" >
-                    <button type="submit">Create Account</button>
+                    <button class="bottone" type="submit">Create Account</button>
                     </form>
                     <p>Already have an account? <a href="#">Log in</a></p>
                 </div>
