Added initial javascript checking function

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         </div>
                         <div>
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password" name="password">
+                            <input type="password" id="password" name="password" onkeypress="password_check()">
 
                             <label for="password_repeat">CONFIRM PASSWORD</label>
-                            <input type="password" id="password_repeat" name="password_repeat">
+                            <input type="password" id="password_repeat" name="password_repeat"  onkeypress="password_check()">
                         </div>
                 </div>
 
