Added defer to the script code to make load js after html. Fixed Bug with password checking

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Sign up form</title>
 
         <link rel="stylesheet" href="./styles/styles.css">
-        <script src="./scripts/javascript.js"></script>
+        <script src="./scripts/javascript.js" defer></script>
     </head>
     <body>
         <div class="form">
